--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URL = 'mongodb+srv://ivarraknash3:raknash3@cluster0.8bxmreo.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET = 'superhardstringtoguess'
-PORT = 3001
+NODE_ENV = 'development'
+FRONTEND_URL = 'http://localhost:3000'
